--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "reactstrap": "^9.1.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
